# hw10_django

./: pyproject.toml
hw10/: db.sqlite3
hw10/hw10/: settings.py  urls.py
hw10/quotes/: forms.py  models.py  urls.py  views.py
hw10/quotes/migrations/: 0001_initial.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: add_author.html  base.html  index.html  mongo_index.html
hw10/users/: urls.py  views.py
hw10/users/templates/users/: login.html  logout.html
hw10/utils/: migration.py  quotes.json  quotes_mongo.py
