[tool.poetry]
name = "hw10-django"
version = "0.1.0"
description = ""
authors = ["Moivvas <moivvas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
